# tikz-studio

./: .gitignore  CMakeLists.txt  LICENSE  PROPOSED_FEATURES.md  README.md  truck_diagram.tex
src/: common.h  main.cpp
src/data/: commands.cpp  commands.h  curve.cpp  curve.h  document.cpp  document.h  ellipse.cpp  ellipse.h  group.cpp  group.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h
src/gui/: canvas.cpp  canvas.h  canvasview.cpp  canvasview.h  colorpalette.cpp  colorpalette.h  contexttoolbar.cpp  contexttoolbar.h  curveitem.cpp  curveitem.h  ellipseitem.cpp  ellipseitem.h  groupitem.cpp  groupitem.h  layerspanel.cpp  layerspanel.h  lineitem.cpp  lineitem.h  mainwindow.cpp  mainwindow.h  pointitem.cpp  pointitem.h  polygonitem.cpp  polygonitem.h  propertiespanel.cpp  propertiespanel.h  toolpalette.cpp  toolpalette.h
